--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-right: 40px;
 }
 .Header-left img{
     padding: 0px 10px 0px 10px;
