--- a/src/Components/Makeup/Makeup.css
+++ b/src/Components/Makeup/Makeup.css
@@ -1,3 +1,6 @@
+body{
+    padding: 0px;
+}
 .Makeup-Container {
     display: flex;
     flex-direction: column;
@@ -36,10 +39,11 @@
     margin-bottom: 70px;
 }
 .Contagary {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
     gap: 10px;
+    padding: 15px;
+    box-shadow: 0 4px 6px #0000001a;
+    border-radius: 8px;
+    margin-bottom: 15px;
 }
 
 .Contagary-upper {
